<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <include layout="@layout/app_title"/>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusableInTouchMode="true"
            android:focusable="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/store_name"
                    fontPath="fonts/SourceHanSansCN-Normal.ttf"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:ignore="MissingPrefix"
                    android:paddingRight="10dp"
                    android:lineSpacingMultiplier="0.9"
                    android:includeFontPadding="false"
                    />

                <com.github.customview.MyEditText
                    android:id="@+id/et_shop_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:imeOptions="actionNext"
                    android:hint="请输入您的店铺名称"
                    android:textSize="15sp"
                    android:inputType="text"
                    />
            </LinearLayout>
            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/border_e52"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    fontPath="fonts/SourceHanSansCN-Normal.ttf"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:ignore="MissingPrefix"
                    android:lineSpacingMultiplier="0.9"
                    android:includeFontPadding="false"
                    android:paddingRight="10dp"
                    />

                <com.github.customview.MyEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:hint="请输入您的姓名"
                    android:textSize="15sp"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    />
            </LinearLayout>
            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/border_e52"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_phone"
                    fontPath="fonts/SourceHanSansCN-Normal.ttf"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:ignore="MissingPrefix"
                    android:lineSpacingMultiplier="0.9"
                    android:includeFontPadding="false"
                    android:paddingRight="10dp"
                    />
                <com.github.customview.MyEditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="15sp"
                    android:inputType="number"
                    android:imeOptions="actionNext"
                    android:hint="请输入您的手机号"
                    />
            </LinearLayout>
            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/border_e52"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/store_address"
                    fontPath="fonts/SourceHanSansCN-Normal.ttf"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:ignore="MissingPrefix"
                    android:lineSpacingMultiplier="0.9"
                    android:includeFontPadding="false"
                    android:paddingRight="10dp"
                    />
                <TextView
                    android:id="@+id/tv_editaddress_area"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:hint="请选择地区"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/jiantou_right"
                    />
            </LinearLayout>
            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/border_e52"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_address"
                    fontPath="fonts/SourceHanSansCN-Normal.ttf"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:ignore="MissingPrefix"
                    android:lineSpacingMultiplier="0.9"
                    android:includeFontPadding="false"
                    android:paddingRight="10dp"
                    />
                <com.github.customview.MyEditText
                    android:id="@+id/et_address_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="15sp"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:hint="请选择详细地址"
                    />
            </LinearLayout>
            <View
                android:layout_height="6dp"
                android:layout_width="match_parent"
                android:background="@color/submit_background"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:background="@color/white"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <com.github.customview.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="营业执照\n营业执照编号"
                    fontPath="fonts/SourceHanSansCN-Normal.ttf"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_gravity="center_vertical"
                    tools:ignore="MissingPrefix"
                    android:lineSpacingMultiplier="0.9"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="3dp"
                    android:paddingRight="10dp" />
            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1">
                <com.github.customview.MyEditText
                    android:id="@+id/et_license_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:gravity="bottom"
                    android:layout_gravity="bottom"
                    android:inputType="text"
                    android:hint="请输入您的执照编号"
                    />
            </LinearLayout>
                <ImageView
                    android:id="@+id/iv_store_license"
                    android:layout_width="52dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/camera_small"
                    android:scaleType="fitXY"
                    android:layout_height="52dp" />
            </LinearLayout>
            <View
                android:layout_height="6dp"
                android:layout_width="match_parent"
                android:background="@color/submit_background"
                />
            <LinearLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_height="68dp">

                <com.github.customview.MyTextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="动物防疫合格证"
                    fontPath="fonts/SourceHanSansCN-Normal.ttf"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:ignore="MissingPrefix"
                    android:lineSpacingMultiplier="0.9"
                    android:includeFontPadding="false"
                    />
                <com.github.customview.MyImageView
                    android:id="@+id/iv_store_license1"
                    android:layout_width="52dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/camera_small"
                    android:layout_height="52dp" />
            </LinearLayout>
            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/border_e52"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <com.github.customview.MyTextView
                    fontPath="fonts/SourceHanSansCN-Normal.ttf"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:includeFontPadding="false"
                    android:lineSpacingMultiplier="0.9"
                    android:text="动物诊疗许可证"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:ignore="MissingPrefix" />

                <com.github.customview.MyImageView
                    android:id="@+id/iv_store_license2"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/camera_small"  />
            </LinearLayout>
            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/border_e52"
                />
            <LinearLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_height="68dp">

                <com.github.customview.MyTextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="店铺场地照片"
                    fontPath="fonts/SourceHanSansCN-Normal.ttf"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:ignore="MissingPrefix"
                    android:lineSpacingMultiplier="0.9"
                    android:includeFontPadding="false"
                    />
                <com.github.customview.MyImageView
                    android:id="@+id/iv_store_license3"
                    android:layout_width="52dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/camera_small"
                    android:layout_height="52dp" />
            </LinearLayout>
            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/border_e52"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:paddingTop="24dp"
                android:paddingBottom="24dp"
                android:layout_marginTop="1dp"
                android:background="@color/white">
                <com.github.customview.MyTextView
                    android:id="@+id/tv_submit"
                    android:layout_width="165dp"
                    android:layout_height="27dp"
                    android:text="确认信息"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"
                    app:my_tv_solid="@color/blue"
                    app:my_tv_press="@color/blue_press"
                    android:gravity="center"
                    app:my_tv_corner_radius="20dp"
                    android:textSize="15sp"
                    android:layout_marginTop="5dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>